<resources>
    <string name="app_name">JSE</string>
    <string name="action_settings">Settings</string>
    <string name="TAG_SUCCESS">success</string>
    <string name="locations_url">http://phpstack-1830-4794-62139.cloudwaysapps.com/locations.php</string>
    <string name="TAG_LOCATIONS">locations</string>
    <string name="TAG__LOCATION_ID">id</string>
    <string name="TAG__BRANCH_ID">branchId</string>
    <string name="TAG_NAME">name</string>
    <string name="TAG_PHONE">phoneNumber</string>
    <string name="TAG_ADDRESS">address</string>
    <string name="TAG_CITY">city</string>
    <string name="TAG_STATE">state</string>
    <string name="TAG_ZIP">zip</string>
    <string name="TAG_COUNTRY">country</string>
    <string name="tests_url">http://phpstack-1830-4794-62139.cloudwaysapps.com/tests.php</string>
    <string name="TAG_TESTS">tests</string>
    <string name="TAG_BRANCH_ID">branchId</string>
    <string name="TAG_LOCATION">NAME</string>
    <string name="TAG_DATE">date</string>
    <string name="TAG_TIME">time</string>
    <string name="TAG_CLOSING_DATE">closingDate</string>
    <string name="TAG_CLOSING_TIME">closingTime</string>
    <string name="TAG_GENDER">gender</string>
    <string name="hours_url">http://phpstack-1830-4794-62139.cloudwaysapps.com/library_hours.php</string>
    <string name="TAG_HOURS">hours</string>
    <string name="TAG_LIBRARY_LOCATION">name</string>
    <string name="TAG_DAY_OF_WEEK">dayOfWeek</string>
    <string name="TAG_OPENING_TIME">openingTime</string>
    <string name="TAG_DURATION">duration</string>
    <string name="branches_url">http://phpstack-1830-4794-62139.cloudwaysapps.com/branches.php</string>
    <string name="TAG_BRANCHES">branches</string>
    <string name="TAG_ID">id</string>
    <string name="TAG_BRANCH_NAME">name</string>
    <string name="alerts_url">http://phpstack-1830-4794-62139.cloudwaysapps.com/alerts.php</string>
    <string name="TAG_ALERTS">alerts</string>
    <string name="TAG_LOCATION_NAME">NAME</string>
    <string name="TAG_ALERT_TEXT">alertText</string>
    <string name="TAG_TIME_STAMP">timeStamp</string>
    <string name="url_create_user">http://phpstack-1830-4794-62139.cloudwaysapps.com/new_user_check_email_insert.php</string>
    <string name="url_get_user">http://phpstack-1830-4794-62139.cloudwaysapps.com/login.php</string>
    <string name="url_get_jse_student_id">http://phpstack-1830-4794-62139.cloudwaysapps.com/get_jse_student_id.php</string>
    <string name="url_update_jse_student_id">http://phpstack-1830-4794-62139.cloudwaysapps.com/update_jse_student_id.php</string>
    <string name="url_update_user">http://phpstack-1830-4794-62139.cloudwaysapps.com/update_user.php</string>
    <string name="TAG_RESULT">result</string>
    <string name="TAG_INSERT_RESULT">insertResult</string>
    <string name="TAG_CHECK_EMAIL_RESULT">checkEmailResult</string>
    <string name="TAG_CHECK_LOGIN_RESULT">loginResult</string>
    <string name="TAG_USERS">users</string>
    <string name="TAG_FIRST_NAME">firstName</string>
    <string name="TAG_LAST_NAME">lastName</string>
    <string name="TAG_EMAIL">email</string>
    <string name="TAG_PASSWORD">password</string>
    <string name="TAG_SSN">ssn</string>
    <string name="TAG_LOCATION_ID">locationId</string>
    <string name="TAG_DOB">dob</string>
    <string name="TAG_JSE_STUDENT_ID">jseStudentId</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_right">SIGN IN</string>
    <string name="login_sign_up_msg">Don\'t have an account?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="register1_sign_in_msg">Already have an account?</string>
    <string name="register1_sign_in">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register1_continue">CONTINUE</string>
    <string name="register_1_right">CREATE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Birthday</string>
    <string name="gender">Gender</string>
    <string name="ssn">Last 4 SSN</string>
    <string name="default_location">Choose a Default Location</string>
    <string name="register_2_right">CREATE ACCOUNT</string>
    <string name="register_2_left">PREVIOUS</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_profile_right">UPDATE PROFILE</string>
    <string name="update_profile_left">@android:string/cancel</string>
    <string name="jse_office">JSE OFFICE</string>
    <string name="jse_phone_number">732-888-8978</string>
    <string name="schedule_test">SCHEDULE A TEST</string>
    <string name="schedule_test_phone_number">800-989-6985</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="jse_email_address">info@jseoffice.com</string>
    <string name="office_hours">OFFICE HOURS</string>
    <string name="jse_office_hours_mon_thurs">Mon - Thurs</string>
    <string name="jse_office_hours_friday">Fri</string>
    <string name="jse_office_hours_mon_thurs_hours_start_time">09:00 AM</string>
    <string name="jse_office_hours_mon_thurs_hours_end_time">02:00 PM</string>
    <string name="jse_office_hours_friday_hours_start_time">09:00 AM</string>
    <string name="jse_office_hours_friday_hours_end_time">02:00 PM</string>
    <string name="jse_office_email_subject">Contact JSE Android App</string>
    <string name="location_address">1818 18th Ave. Brooklyn, NY 11204</string>
    <string name="location_phone_number">718-789-6548</string>
    <string name="hours_title">HOURS</string>
    <string name="searchButton">SEARCH</string>
    <string name="registration_open">Registration is currently open from</string>
    <string name="registration_date_range">%1$s to %2$s</string>
    <string name="location_spinner_title">Select a branch</string>
    <string name="searchBranch">Search by branch</string>
    <string name="searchDay">Search by day of week</string>
    <string name="searchLocation">Search by location</string>
    <string name="librarie_location_title">LOCATION</string>
    <string name="default_location_title">Default Location</string>
    <string name="location">Location Name</string>
    <string name="address_title">ADDRESS</string>
    <string name="phone_number_title">PHONE NUMBER</string>
    <string name="alert">LOCATION ALERTS</string>
    <string name="alerts_day">Sunday</string>
    <string name="alerts_date">September 7 2015</string>
    <string name="alerts_time">9:57 AM</string>
    <string name="alerts_message">Please be aware of school closing today.</string>
    <string name="find_test">FIND TEST AT THIS LOCATION</string>
    <string name="library_day_title">Sunday</string>
    <string name="library_hour_to">9:00 AM</string>
    <string name="library_hour_from">12:00 PM</string>
    <string name="location_title">Location Name</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="registration_deadline">DEADLINE TO REGISTER</string>
    <string name="toolbar_title_contact">Contact</string>
    <string name="toolbar_title_dashboard">My Default Location</string>
    <string name="toolbar_title_libraries_search">Search Libraries</string>
    <string name="toolbar_title_libraries">Libraries</string>
    <string name="toolbar_title_login">Welcome to JSE</string>
    <string name="toolbar_title_register1">Create Account</string>
    <string name="toolbar_title_register2">Create an Account - Step 2</string>
    <string name="toolbar_title_search">Search for a Test</string>
    <string name="toolbar_title_results">Tests</string>
    <string name="toolbar_title_update_profile">Update Profile</string>
    <string name="menu_item_log_out">Log Out</string>
    <string name="menu_item_update_profile">Update Profile</string>
    <string name="df_">Log Out</string>
    <string name="tabLayout_dashboard">Dashboard</string>
    <string name="tabLayout_tests">Tests</string>
    <string name="tabLayout_libraries">Libraries</string>
    <string name="tabLayout_contact">Contact</string>
    <string name="d_login_failed">Login Failed</string>
    <string name="d_create_account_failed">Create Account Failed</string>
    <string name="d_update_account_failed">Update Account Failed</string>
    <string name="d_jse_office">JSE Office</string>
    <string name="d_no_connection">No Internet Connection</string>
    <string name="d_send_password">Send me my password</string>
    <string name="d_schedule_test_title">Schedule a Test</string>
    <string name="d_become_jse_member_title">Become a JSE Member</string>
    <string name="d_load_info_fail_title">Application Information</string>
    <string name="d_call">CALL</string>
    <string name="d_ok">OK</string>
    <string name="d_cancel">@android:string/cancel</string>
    <string name="d_yes">YES</string>
    <string name="d_no">NO</string>
    <string name="d_send">SEND</string>
    <string name="d_try_again">TRY AGAIN</string>
    <string name="d_office_closed_msg">The JSE office is currently closed.
        Would you like to set a reminder on your phone to call during office hour?</string>
    <string name="d_account_create_fail_duplicate_email_msg">Please enter a different email address.
        This one is already taken.</string>
    <string name="d_account_create_fail_msg">Account could not be created at this time.
        Please try again later.</string>
    <string name="d_update_create_fail_msg">Account could not be updated at this time.
        Please try again later.</string>
    <string name="d_login_fail_msg">Unable to login at this time.
        Please try again later.</string>
    <string name="d_fields_require_values_msg">All fields require a value.</string>
    <string name="d_invalid_email_msg">Email address entered is not valid.
        Please correct and try again.</string>
    <string name="d_no_connection_msg">You need an internet connection to use this application.
        Please try again.</string>
    <string name="d_username_password_not_match_msg">This username and password did not match.
        Please try again.</string>
    <string name="d_user_not_updated_msg">User not updated.</string>
    <string name="d_enter_email_msg">Enter your email address.</string>
    <string name="d_enter_valid_email_msg">You need to enter a valid email address.</string>
    <string name="d_enter_valid_dob_msg">Enter Date of birth in MM/DD/YYYY format.</string>
    <string name="d_enter_last_4_ssn">Enter Last 4 digits of SSN.</string>
    <string name="d_schedule_test_become_member">To schedule a test you need to be a JSE member.
        Please call the JSE office to register.</string>
    <string name="d_passwords_not_match_msg">Password and Confirm Password values don\'t match.
        Please try again.</string>
    <string name="d_load_info_fail_msg">Application information can not be loaded right now.</string>
    <string name="msg_no_results">No results found</string>
    <string name="msg_logged_out">You\'ve been logged out</string>
    <string name="tests_icon_desc">Tests Icon</string>
    <string name="phone_icon_desc">Phone Icon</string>
    <string name="libraries_icon_desc">Libraries Icon</string>
    <string name="dashboard_icon_desc">Dashboard Icon</string>
    <string name="email_icon_desc">Email Icon</string>
    <string name="clock_icon_desc">Clock Icon</string>
    <string name="map_icon">Map Icon</string>
    <string name="map_icon_round">Round Map Icon</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="calendar_icon">Calendar Icon</string>
<string name="monthDayYear">MMM dd yyyy</string>
</resources>