<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DashboardFragment"
    android:paddingBottom="72dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/primary" />

        <FrameLayout
            android:id="@+id/dashboardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </FrameLayout>


        <View
            style="@style/App_Divider"
            android:layout_marginTop="@dimen/default_margin" />

        <LinearLayout
            android:id="@+id/alertsLinearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alertsTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/alerts"
                android:textColor="@color/primary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">


                <TextView
                    android:id="@+id/alertsDayTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_weight="1"
                    android:text="@string/alerts_day"
                    android:textColor="@color/primary_text" />


                <TextView
                    android:id="@+id/alertsDateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_weight="1"
                    android:text="@string/alerts_date"
                    android:textColor="@color/primary_text" />


                <TextView
                    android:id="@+id/alertsTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/alerts_time"
                    android:textColor="@color/primary_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/AlertsMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alerts_message"
                android:textColor="@color/secondary_text" />

            <View
                style="@style/App_Divider"
                android:layout_marginTop="@dimen/default_margin" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textColor="@android:color/white"
        android:text="@string/find_test"
        android:background="@drawable/card_layout"/>
</LinearLayout>



