<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/default_margin"
    android:orientation="vertical"
    tools:context=".LocationInfoFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ADDRESS"
        style="@style/App_TextView_Colored_Label"/>
    <TextView
        android:id="@+id/locationAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_address"
        android:textColor="@color/primary_text" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PHONE NUMBER"
        style="@style/App_TextView_Colored_Label"
        android:layout_marginTop="@dimen/default_margin"/>
    <TextView
        android:id="@+id/locationPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_phone_number"
        android:textColor="@color/primary_text"/>


    <TextView
        android:id="@+id/locationLibraryHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/hours_title"
        style="@style/App_TextView_Colored_Label" />



</LinearLayout>