<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/libraryDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_day_title"
            android:textColor="@color/primary_text" />


            <TextView
                android:id="@+id/libraryOpeningTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/default_margin"
                android:text="@string/library_hour_to"
                android:textColor="@color/secondary_text"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="-"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/libraryClosingTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library_hour_from"
                android:textColor="@color/secondary_text" />

    </LinearLayout>

</LinearLayout>